--- a/Stylesheets/new.css
+++ b/Stylesheets/new.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Merienda&display=swap");
-body{
+body
+{
     margin: 0;
     padding: 0;
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../Resources/background.jpg);
@@ -9,26 +10,44 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
-h1{
+h1
+{
     margin-top:30px;
     text-align: center;
     font-family: 'Merienda', cursive;
     color: whitesmoke;
 }
-#Result{ 
+#Result
+{ 
     margin-top:20%;
     margin-left: 30%; 
 }
-.Entities{
+.Entities
+{
     width: 50%;
     height: 70%;
     max-width: 50em;
-    background-color: rgba(254, 254, 255, 0.6);
+    background-color: rgba(188, 194, 197, 0.4);
     position: relative;
-    top: 30px;
+    top: 0.5em;
     left: 22%;
     padding: 2em;
-    border-radius: 0.9375em;
+    border-radius: 3.5em 0 3.5em 0;
+    border: 2px solid black;
     text-align: center;
     font-family: 'Merienda', cursive;
+}
+#button1
+{
+ color: whitesmoke;
+ background-color: rgb(13, 68, 119);
+ font-weight: bold;
+ width: 100px;
+ height: 30px;
+ border-radius: 1em;
+}
+#button1:hover
+{
+background-color: rgb(206, 218, 47);
+color: black;
 }
